--- a/BookKeeping/簿記3級/第10回＿決算整理仕訳2-3.md
+++ b/BookKeeping/簿記3級/第10回＿決算整理仕訳2-3.md
@@ -98,7 +98,7 @@ A:
 
 ![減価償却2](/BookKeeping\簿記3級\画像置き場\10_減価償却2.png)  
 
-###### 練習問題
+###### プチ練習問題
 
 ○1年4月1日、130万円の建物を掛けで購入した。  
 建物1,300,000 / 未払金1,300,000  
@@ -163,14 +163,14 @@ Q:
 ○3年5月31日、上記建物を110万円で売却した(掛け)。  
 A:  
 減価償却累計額150,000 / 建物1,300,000  
-減価償却______20,000 /  
+**減価償却**______20,000 /  
 未収入金____1,100,000 /  
 **固定資産売却損**_30,000 /  
 →  
-前回3月31日から5月31日は2か月が経過しているので2か月分の減価償却を行う。
+前回3月31日から5月31日は2か月が経過しているので2か月分の**減価償却**を行う。
 1月1万だから1,300,000-150,000+20,000
 2か月分の減価償却もしたうえで売ろうよ。  
-2か月分の減価償却は累計額には含めずに費用の発生とするため、仕訳は分ける。  
+**2か月分の減価償却は累計額には含めずに費用の発生とするため、仕訳は分ける**。  
 計算すると3万円の損なので**固定資産売却損**という**費用**(**特別損失**)に計上する。  
 
 以上が**期中取得**と**期中売却**の例題  
@@ -381,150 +381,167 @@ A:
 
 #### 練習問題
 
-（期末日はすべて3月31日とします）
+（期末日はすべて3月31日とします）  
 
-まずは基本の【第１部】（Q6まで）
-Q1:×2年3月31日が終了し決算になった。×1年4月1日に購入した機械装置（取得価額100万円、耐用年数9年、残存価額10万円）の減価償却の仕訳は？
+まずは基本の【第１部】（Q6まで）  
 
+Q1:  
+×2年3月31日が終了し決算になった。  
+×1年4月1日に購入した機械装置（取得価額100万円、耐用年数9年、残存価額10万円）の減価償却の仕訳は？  
 
-A1:
-減価償却費100,000 / 機械装置減価償却累計額100,000
-機械や装置は「機械装置」です（私の動画では初登場かもしれませんが覚えておいて下さい）。そして年間償却額は
-（100万－10万）÷9年＝10万です。
-貸方を「機械装置」とする直接法であれば「簿価を減らすのが減価償却」というイメージが湧きやすいのですが、実際にはこのように「取得価額から控除してね」という「累計額」を用いる間接法を用います。
-なお、このように毎期一定金額を減価償却する方法を定額法といいます。簿記3級では定額法のみが出題されます。
+A1:  
+減価償却費100,000 / 機械装置減価償却累計額100,000  
+→  
+機械や装置は「機械装置」です（私の動画では初登場かもしれませんが覚えておいて下さい）。  
+そして年間償却額は  
+（100万－10万）÷9年＝10万です。  
+貸方を「機械装置」とする直接法であれば「簿価を減らすのが減価償却」というイメージが湧きやすいのですが、実際にはこのように「取得価額から控除してね」という「累計額」を用いる間接法を用います。  
+なお、このように毎期一定金額を減価償却する方法を定額法といいます。簿記3級では定額法のみが出題されます。  
 
+_  
 
-Q2:Q1の機械装置について、×3年3月31日終了後の決算でつくられる減価償却の仕訳は？
+Q2:  
+Q1の機械装置について、×3年3月31日終了後の決算でつくられる減価償却の仕訳は？  
 
+A2:  
+減価償却費100,000 / 機械装置減価償却累計額100,000  
+→  
+同じです。残存価額になるまで毎期繰り返します。  
 
-A2:
-減価償却費100,000 / 機械装置減価償却累計額100,000
-同じです。残存価額になるまで毎期繰り返します。
+_  
+Q3:  
+（Q1およびQ2の続き） ×3年4月1日、上記機械装置を、50万円で販売し、代金は後日受け取ることにした。仕訳は？  
 
-Q3:（Q1およびQ2の続き） ×3年4月1日、上記機械装置を、50万円で販売し、代金は後日受け取ることにした。仕訳は？
+A3:  
+機械装置減価償却累計額200,000 / 機械装置1,000,000  
+未収入金____________ 500,000 /  
+固定資産売却損_______ 300,000 /  
+→  
+簿価80万円の固定資産を50万円で売却したので30万円の損です。  
 
+減価償却の基本はここまでです。不安な方はQ1からもう一度解いてみて下さい。  
+（なお、ほとんどの固定資産についてはこのように減価償却を行うのですが、「土地」については減価償却を行いません。ずっと使い続けるものだからです。）  
 
-A3:
-機械装置減価償却累計額200,000 / 機械装置1,000,000
-未収入金          　　 　　 500,000 
-固定資産売却損                300,000
-簿価80万円の固定資産を50万円で売却したので30万円の損です。
+_  
 
-減価償却の基本はここまでです。不安な方はQ1からもう一度解いてみて下さい。
-（なお、ほとんどの固定資産についてはこのように減価償却を行うのですが、「土地」については減価償却を行いません。ずっと使い続けるものだからです。）
+Q4:  
+①×2年3月1日にB社に100円の商品を掛け販売した。  
+②×2年3月3日、B社が倒産し上記売掛金が貸倒れた。  
+仕訳は？  
 
+A4:  
+①売掛金100 / 売上100  
+②貸倒損失100 / 売掛金100  
 
-Q4:
-①×2年3月1日にB社に100円の商品を掛け販売した。
-②×2年3月3日、B社が倒産し上記売掛金が貸倒れた。
-仕訳は？
+_  
 
-A4:
-①売掛金100 / 売上100
+Q5:  
+×2年3月31日が終了し初めての決算になった。売掛金および受取手形の残高合計100,000円について、来期に2%が貸倒れると見積もった。仕訳は？  
 
+A5:  
+貸倒引当金繰入2,000 / 貸倒引当金2,000  
+→  
+本問は初めての決算なので貸倒引当金残高は0のはずです。ですので計上金額は2,000円です。  
+もしこれが2年目以降の決算の場合には、「差額を補充する方法」で計上します。たとえば、決算時点ですでに貸倒引当金が500円残っている場合に、2,000円を設定したいのであれば、差額の1,500円を計上します。  
 
-②貸倒損失100 / 売掛金100
+_  
 
+Q6:  
+①×2年3月1日にB社に100円の商品を掛け販売した。  
+②×2年4月3日、B社が倒産し上記売掛金が貸倒れた。  
+仕訳は？  
+（なお、×2年3月31日を期末日とする決算において、決算整理仕訳は適切にすべて行われたものとし、貸倒引当金残高は充分あるものとする）  
 
-Q5:×2年3月31日が終了し初めての決算になった。売掛金および受取手形の残高合計100,000円について、来期に2%が貸倒れると見積もった。仕訳は？
+A6:  
+①売掛金100 / 売上100  
+②貸倒引当金100 / 売掛金100  
+→  
+このとおり、決算をまたいで貸倒れた場合、決算において貸倒引当金の設定対象となっていたために、借方はもう費用にはしません。貸倒れると予想して計上しておいた貸倒引当金を用います。  
 
+_  
 
-A5:
-貸倒引当金繰入2,000 / 貸倒引当金2,000
-本問は初めての決算なので貸倒引当金残高は0のはずです。ですので計上金額は2,000円です。
-もしこれが2年目以降の決算の場合には、「差額を補充する方法」で計上します。たとえば、決算時点ですでに貸倒引当金が500円残っている場合に、2,000円を設定したいのであれば、差額の1,500円を計上します。
+【ここから先は第２部です】  
 
+Q7:  
+×4年5月1日、得意先C社が倒産した。なおC社に対する売掛金は300円であり、このうち100円は前期中に販売したものであり、残り200円は当期中に販売したものである。なおこの時点で貸倒引当金残高は1,000円ある。仕訳は？  
 
-Q6:
-①×2年3月1日にB社に100円の商品を掛け販売した。
-②×2年4月3日、B社が倒産し上記売掛金が貸倒れた。
-仕訳は？
-（なお、×2年3月31日を期末日とする決算において、決算整理仕訳は適切にすべて行われたものとし、貸倒引当金残高は充分あるものとする）
-
-
-A6:
-①売掛金100 / 売上100
-
-
-②貸倒引当金100 / 売掛金100
-このとおり、決算をまたいで貸倒れた場合、決算において貸倒引当金の設定対象となっていたために、借方はもう費用にはしません。貸倒れると予想して計上しておいた貸倒引当金を用います。
-
-【ここから先は第２部です】
-Q7:×4年5月1日、得意先C社が倒産した。なおC社に対する売掛金は300円であり、このうち100円は前期中に販売したものであり、残り200円は当期中に販売したものである。なおこの時点で貸倒引当金残高は1,000円ある。仕訳は？
- 
-
-A7:
+A7:  
 貸倒引当金100 / 売掛金300
-貸倒損失   200
+貸倒損失   200  
 
+_  
 
-Q8:×8年3月31日が終了し決算となった。売掛金および受取手形の残高合計100,000円について、来期に2%が貸倒れると見積もった。なおこの時点で貸倒引当金残高は3,000円ある。仕訳は？
+Q8:  
+×8年3月31日が終了し決算となった。売掛金および受取手形の残高合計100,000円について、来期に2%が貸倒れると見積もった。なおこの時点で貸倒引当金残高は3,000円ある。仕訳は？  
 
+A8:  
+貸倒引当金1,000 / 貸倒引当金戻入1,000  
+→
+余剰分を「もどしいれ」ます。収益です。  
+そうか、2,000円貸し倒れると良そうしたから貸倒引当金にするところ、3000円残ってるから、そのうちの2000円を使える。  
+残った1000円は資産に戻してしまえばいいという話だったな。  
 
-A8:
-貸倒引当金1,000 / 貸倒引当金戻入1,000
-余剰分を「もどしいれ」ます。収益です。
+_  
 
+Q9:  
+①×2年3月20日、得意先A社に商品300円を掛け販売した。  
+②×2年3月25日、A社が倒産し上記売掛金が貸倒れた。  
+③×2年3月30日、上記売掛金のうち100円が現金で回収された。  
+仕訳は？  
 
-Q9:
-①×2年3月20日、得意先A社に商品300円を掛け販売した。
-②×2年3月25日、A社が倒産し上記売掛金が貸倒れた。
-③×2年3月30日、上記売掛金のうち100円が現金で回収された。
-仕訳は？
+A9:  
+①売掛金300 / 売上300  
+②貸倒損失300 / 売掛金300  
+③現金100 / 貸倒損失100  
 
+_  
 
-A9:
-①売掛金300 / 売上300
+Q10:  
+①×2年3月20日、得意先A社に商品300円を掛け販売した。  
+②×2年3月25日、A社が倒産し上記売掛金が貸倒れた。  
+③×2年4月1日、上記売掛金のうち100円が現金で回収された。なおこの時点で貸倒引当金残高は500円である。  
+仕訳は？  
 
+A10:  
+①売掛金300 / 売上300  
+②貸倒損失300 / 売掛金300  
+→  
+②の時点で貸倒引当金残高がいくらあったとしても、②の答えは貸倒損失です。  
+掛け販売した期と同じ期に貸し倒れた場合、「貸倒損失」を用います。  
+このときに「貸倒引当金」残高があろうとなかろうと、です。  
+決算（＝貸倒引当金を設定する）になる前に貸し倒れたからです。  
+販売した期と貸し倒れた期が異なる場合に貸倒引当金を用います（貸倒引当金の残高があれば）。  
+③現金100 / 償却債権取立益100  
+→  
+前期以前に貸倒処理が確定されてしまっているので「当期に貸倒処理の逆仕訳」というわけにはいきません。貸方に「貸倒損失」や「貸倒引当金」を仕訳するケースとは、そもそもこれらを借方に計上しておいて、その取消とするケースです。本問では、当期に貸倒処理をしたわけではなく前期にしてありますので逆仕訳はできません。こういった場合に用いるのが償却債権取立益です。  
 
-②貸倒損失300 / 売掛金300
+_  
 
+Q11:  
+×2年3月1日に120万円のパソコンを購入したため、×2年3月31日終了時点の決算において減価償却を行う（耐用年数10年、残存価額0円）。  
+仕訳は？  
 
-③現金100 / 貸倒損失100
+A11:  
+減価償却費10,000 / 備品減価償却累計額10,000  
+→  
+120万円を10年かけて償却していきます。ですので年間償却額は12万円です。  
+購入したのは3月1日ですので、当期は3月（1ヶ月）だけの償却です。  
+よって12万円÷12＝1万円  
 
+_  
 
-Q10:
-①×2年3月20日、得意先A社に商品300円を掛け販売した。
-②×2年3月25日、A社が倒産し上記売掛金が貸倒れた。
-③×2年4月1日、上記売掛金のうち100円が現金で回収された。なおこの時点で貸倒引当金残高は500円である。
-仕訳は？
-
-
-A10:
-①売掛金300 / 売上300
-
-
-②貸倒損失300 / 売掛金300
-②の時点で貸倒引当金残高がいくらあったとしても、②の答えは貸倒損失です。
-掛け販売した期と同じ期に貸し倒れた場合、「貸倒損失」を用います。
-このときに「貸倒引当金」残高があろうとなかろうと、です。
-決算（＝貸倒引当金を設定する）になる前に貸し倒れたからです。
-販売した期と貸し倒れた期が異なる場合に貸倒引当金を用います（貸倒引当金の残高があれば）。
-
-
-③現金100 / 償却債権取立益100
-前期以前に貸倒処理が確定されてしまっているので「当期に貸倒処理の逆仕訳」というわけにはいきません。貸方に「貸倒損失」や「貸倒引当金」を仕訳するケースとは、そもそもこれらを借方に計上しておいて、その取消とするケースです。本問では、当期に貸倒処理をしたわけではなく前期にしてありますので逆仕訳はできません。こういった場合に用いるのが償却債権取立益です。
-
-
-Q11:×2年3月1日に120万円のパソコンを購入したため、×2年3月31日終了時点の決算において減価償却を行う（耐用年数10年、残存価額0円）。
-仕訳は？
-
-
-A11:
-減価償却費10,000 / 備品減価償却累計額10,000
-120万円を10年かけて償却していきます。ですので年間償却額は12万円です。
-購入したのは3月1日ですので、当期は3月（1ヶ月）だけの償却です。
-よって12万円÷12＝1万円
-
-
-Q12:（Q11の続き）×2年5月31日、上記パソコンが不要になったのでほとんど使っていないが売却することにし、100万円で売却し、代金は後日受け取ることとした。仕訳は？
-
+Q12:  
+(Q11の続き)×2年5月31日、上記パソコンが不要になったのでほとんど使っていないが売却することにし、100万円で売却し、代金は後日受け取ることとした。仕訳は？  
 
 A12:
-備品減価償却累計額10,000 / 備品1,200,000
-減価償却費                20,000
-未収入金               1,000,000
-固定資産売却損      170,000
-前回償却した×2年3月31日から2ヵ月が経過しましたので、売却時点では2ヶ月分が未償却です。2ヶ月経過したので2ヵ月分簿価を減らしてから売却の仕訳をすることになります。
-
+減価償却累計額30,000 / 備品1,200,000  
+未収入金1,000,000  
+減価償却売却損170,000  
+×
+→
+備品減価償却累計額10,000 / 備品1,200,000  
+減価償却費_______20,000 /  
+未収入金_________1,000,000 /  
+固定資産売却損____170,000 /  
+→
+前回償却した×2年3月31日から2ヵ月が経過しましたので、売却時点では2ヶ月分が未償却です。2ヶ月経過したので2ヵ月分簿価を減らしてから売却の仕訳をすることになります。  
