--- a/BookKeeping/簿記3級/第14回＿帳簿.md
+++ b/BookKeeping/簿記3級/第14回＿帳簿.md
@@ -14,7 +14,7 @@
 
 ---
 
-#### 1.全体像
+### 1.全体像
 
 今まで学習してきた「仕訳」  
 Q:仕訳ってどこに書くの？  
@@ -43,7 +43,7 @@ A:
 
 ---
 
-#### 2.主要簿
+### 2.主要簿
 
 例えば  
 4月2日、A社から1個100円の商品aを300個掛けで仕入れた。  
@@ -55,7 +55,7 @@ A:
 仕訳帳に仕訳していく。
 その後、仕訳情報を総勘定元帳(勘定科目ごとに分かれている)に書き写す(これを**転記**という)  
 
-##### 仕訳帳
+#### 仕訳帳
 
 |日付|借方|金額|貸方|金額|
 |:--|:--|:--|:--|:--|
@@ -64,7 +64,7 @@ A:
 |4/15|現金|100,000|当座預金|100,000|
 |4/20|支払家賃|80,000|現金|80,000|
 
-##### 総勘定元帳
+#### 総勘定元帳
 
 |>|現金|
 |:--|:--|
@@ -101,7 +101,7 @@ A:
 
 ---
 
-#### 3.補助簿
+### 3.補助簿
 
 たくさんある。  
 ほぼ各勘定科目ごとに作成され、詳細な取引内容を記録しておく帳簿  
@@ -141,7 +141,7 @@ A:
 
 ---
 
-##### 買掛金元帳
+#### 買掛金元帳
 
 →A社とのやり取りのみ記載するので、4/10のB社とのやり取りは書かない。  
 
@@ -149,16 +149,16 @@ A:
 
 ---
 
-##### 商品有高帳
+#### 商品有高帳
 
 ・商品aとのやり取りなので、それ以外は書かない。商品毎に商品有高帳を作るイメージ。  
 ・先入先出法と加重平均法で書き方が違う。  
 
-###### 商品有高帳(先入先出法)
+##### 商品有高帳(先入先出法)
 
 ![商品有高帳(先入先出法)](/BookKeeping\簿記3級\画像置き場\14_商品有高帳(先入先出法).png)  
 
-###### 商品有高帳(移動平均法)
+##### 商品有高帳(移動平均法)
 
 ・ごちゃまぜにして加重平均  
 ①まずは合計金額を算出する。→ 30,000 + 77,000 = 107,000  
@@ -172,60 +172,64 @@ A:
 
 ---
 
-##### 仕入帳
+#### 仕入帳
 
 ![仕入帳](/BookKeeping\簿記3級\画像置き場\14_仕入帳.png)  
 
 ---
 
-##### 固定資産台帳
+#### 固定資産台帳
 
 ![固定資産台帳](/BookKeeping\簿記3級\画像置き場\14_固定資産台帳.png)  
 
 ---
 
-#### 練習問題
+### 練習問題
 
 Q1:  
 会計帳簿は概念的に大きく2つに分かれる。何と何？
 
+A1:  
+主要簿と補助簿  
 
-A1:
-主要簿と補助簿
+_  
 
+Q2:  
+主要簿に分類される帳簿って何？  
 
-Q2:主要簿に分類される帳簿って何？
+A2:  
+仕訳帳と総勘定元帳  
 
+_  
 
-A2:
-仕訳帳と総勘定元帳
+Q3:  
+仕訳帳から総勘定元帳へ、勘定科目一つ一つ仕訳データを書き写すことを何ていう？  
 
+A3:  
+転記  
 
-Q3:仕訳帳から総勘定元帳へ、勘定科目一つ一つ仕訳データを書き写すことを何ていう？
+_  
 
+Q4:  
+仕訳帳と総勘定元帳以外の会計帳簿を補助簿という。〇か×か？  
 
-A3:
-転記
+A4:  
+〇  
 
+_  
 
-Q4:仕訳帳と総勘定元帳以外の会計帳簿を補助簿という。〇か×か？
+Q5:  
+土地や建物などの明細（取得日、帳簿価額、取得価額など）を記載しておく補助簿は何？  
 
+A5:  
+固定資産台帳  
 
-A4:
-〇
+_  
 
+Q6:  
+現金の入出金を記録しておく補助簿は何？  
 
-Q5:土地や建物などの明細（取得日、帳簿価額、取得価額など）を記載しておく補助簿は何？
-
-
-A5:
-固定資産台帳
-
-
-Q6:現金の入出金を記録しておく補助簿は何？
-
-
-A6:
-現金出納帳
-ちなみに、小口現金用の補助簿は「小口現金出納帳」です。
+A6:  
+現金出納帳  
+ちなみに、小口現金用の補助簿は「小口現金出納帳」です。  
 
