--- a/BookKeeping/簿記3級/第13回＿剰余金の配当.md
+++ b/BookKeeping/簿記3級/第13回＿剰余金の配当.md
@@ -8,11 +8,114 @@
 
 ### 目次
 
+1. 株主総会
+2. 余剰金の配当
+
 ---
 
-### aa
+### 株主総会
 
-剰余金の配当については練習問題がすべてで他に特筆すべき内容がない。  
+-----|----------|----------|--------------|------  
+　3/31  　　4/30  　　5/31  　　　　6/30  
+　期末日　　　　　　↑  　　　　　↑  
+　　　　　　　　株主総会  　　株主総会  
+　　　　　　　　＆確定申告  　＆確定申告  
+　　　　　　　　(中小企業)  　(上場企業など)  
+
+株主総会  
+_  
+役員  　　　　　　　　　　 | 会計監査人(監査法人、公認会計士)  
+(取締役、監査役など)  
+_  
+管理職  
+(工場長、部長、課長など)  
+_  
+その他従業員  
+(主任、チームリーダー、平社員など)  
+
+役員の中には代表権を持つ人がいる。→代表取締役  
+大体、代表取締役社長という肩書になっているはず。  
+一定規模以上の会社は会計監査人を置かないといけない。  
+外部の人間なので、組織のピラミッドに属さない。  
+社長より偉いのが株主。最高意思決定機関。  
+年に1回は必ず開催される。  
+
+#### 株主総会で何を決めるのか？
+
+- 決算の承認
+- 他社との合併の是非
+- 役員人事
+- 配当金の支払い(剰余金の配当)
+
+---
+
+### 余剰金の配当
+
+![13_剰余金の配当](/BookKeeping\簿記3級\画像置き場\13_剰余金の配当.png)  
+
+剰余金の配当とは？  
+→株主に配当を出すこと。  
+→株主に配当を出すって何？  
+→現金を配ること  
+
+株主は配当金領収書がもらえる(通貨代用証券)  
+
+#### 例題1
+
+Q:  
+○2年5月27日開催の株主総会で、繰越利益剰余金300万円について次のように決議された。  
+配当金は100万円とする(即日現金で支払った)。  
+残金は次回の剰余金の処分まで繰越すこととする。  
+
+A:  
+繰越利益剰余金1,000,000 / 現金1,000,000  
+→  
+繰越利益剰余金は純資産。貸方にあるもの。  
+会社法的な表現 : 「剰余金を配当した」  
+簿記的な意味 : 「現金を支払った。その分繰越利益剰余金を減らした」  
+
+(即日現金で支払った)という文言がなければ回答が違ってくる。  
+
+A:  
+繰越利益剰余金1,000,000 / **未払配当金**1,000,000  
+
+_  
+
+Q:  
+○2年5月27日開催の株主総会で、繰越利益剰余金300万円について次のように決議された。  
+配当金は100万円とする。  
+**利益準備金を10万円積み立てる**。  
+残額は次回の剰余金の処分まで繰越こととする。  
+
+A:  
+繰越利益剰余金1,100,000 / 未払配当金1,000,000  
+　　　　　　　　　　　 /**利益準備金**100,000  
+→  
+**利益準備金**は**純資産**。  
+この仕訳の意味することは繰越利益剰余金という勘定科目を利益剰余金という勘定科目に変更しますという事。  
+**簿記的には勘定科目の変更に過ぎない**。本当に単にこれだけ！  
+**積み立てると言いつつ、積み立てていない**。  
+お金は動かない。仕訳するだけ。  
+→
+利益準備金を積み立てる必要性って何なの？  
+**会社法の要請**  
+配当金の10分の1をそうしなければならない。  
+
+Q:  
+後日、配当金を当座預金から支払った。(20％を源泉控除)  
+
+A:  
+未払配当金1,000,000 / 預り金200,000  
+　　　　　　　　　 / 当座預金800,000  
+→  
+配当金を支払う時、あらかじめ税金を差し引いて払いなさいってルールがある。  
+税金は消費者(この場合は株主)から預かっているので預り金(負債)。  
+この場合、所得税150,000、住民税50,000になるだろう。  
+
+剰余金の配当を持って、経理の一巡が終わり。  
+経理は4/1から6月まで忙しい。決算作業、4月月次、通常業務を平行するので忙しい。  
+株主総会やってようやく平常に戻る。  
+11月に中間決算があって、3/31に決算してを繰り返していく。  
 
 ---
 
