--- a/BookKeeping/簿記3級/第15回＿伝票.md
+++ b/BookKeeping/簿記3級/第15回＿伝票.md
@@ -14,4 +14,211 @@
 
 ---
 
-### 1.全体像
+主要簿、仕訳帳、総勘定元帳  
+補助簿、固定資産台帳、現金出納帳,etc  
+
+- 仕訳ってどこに書くの？  
+→**伝票**(会計伝票)  
+- 伝票って1種類？  
+  →実務では何種類もある(1種類のみの企業もある)  
+  →簿記検定では3種類(**三伝票制**)  
+  - **振替伝票** : 入出金のない取引で使う  
+  - **入金伝票** : 入金取引で使う(借方は「現金」)  
+  - **出金伝票** : 出金取引で使う(貸方は「現金」)  
+- なぜ何種類(3種類)もあるの？1種類じゃダメなの？  
+  →1種類でOK!  
+  実際1種類しかない企業も多い。この場合、**振替伝票**(一般会計伝票)のみ。  
+  必要に応じて種類が増えた。  
+  →毎日何件も入出金がある場合、いちいち借方、貸方に「現金」と書くのが面倒くさい。  
+  →  
+  予め借方に「現金」と書いてある伝票 : **入金伝票**  
+  予め貸方に「現金」と書いてある伝票 : **出金伝票**  
+  があれば便利だよねという事。  
+  →  
+  ということで三伝票制  
+  - 使う伝票は**振替伝票**が基本!  
+    ただし、入金(借方「現金」)は**入金伝票**  
+    　　　出金(貸方「現金」)は**出金伝票**  
+
+### 三伝票制
+
+・借方「現金」と仕訳したい取引では**入金伝票**  
+・貸方「現金」と仕訳したい取引では**出金伝票**  
+→  
+裏を返せば  
+・入金伝票を用いた場合には、**借方は絶対に現金と仕訳される**、という意味。  
+・出金伝票を用いた場合には、**貸方は絶対に現金と仕訳される**、という意味。  
+
+![入金出金伝票](/BookKeeping\簿記3級\画像置き場\15_入金、出金伝票.png)
+
+Q:  
+現金800 / 受取利息800 と仕訳したいときに用いる伝票は？  
+A:  
+入金伝票  
+
+_  
+
+Q:  
+電気代1万円を現金で支払ったときに用いる伝票は？  
+A:  
+出金伝票  
+
+_  
+
+Q:  
+電気代1万円を小切手を振り出して支払ったときに用いる伝票は？  
+A:  
+振替伝票  
+
+_  
+
+Q:  
+商品10万円を掛けで仕入れた。起票する伝票の種類と金額は？  
+A:  
+振替伝票に起票  
+仕入100,000 / 買掛金100,000  
+
+_  
+
+Q:  
+商品10万円を現金で仕入れた。起票する伝票の種類と金額は？  
+A:  
+仕入100,000 / 現金100,000  
+出金伝票に起票  
+仕入100,000  
+
+_  
+
+Q:  
+商品10万円を現金で仕入れ、代金のうち2万円は現金で支払い、残金は掛けとした。  
+起票する伝票の種類と金額は？  
+A:  
+仕入100,000 / 現金20,000  
+　　　　　　/ 買掛金80,000  
+
+出金伝票に起票 : 仕入20,000  
+振替伝票に起票 : ×仕入100,000 / 買掛金80,000  
+　　　　　　　 ○仕入80,000 / 買掛金80,000  
+
+→分解して考える。  
+仕入80,000 / 買掛金80,000  
+仕入20,000 / 現金20,000  
+
+別解:  
+出金伝票に起票 : 買掛金20,000  
+振替伝票に起票 : 仕入100,000 / 買掛金100,000  
+
+→分解して考える。  
+仕入100,000 / 買掛金100,000  
+買掛金20,000 / 現金20,000  
+→  
+こっちのやり方のほうが面倒くさいので試験に出やすい。  
+
+Q:  
+商品10万円を販売し、代金のうち2万円は現金で受取り、残金は掛けとした。  
+起票する伝票の種類と金額は？  
+A:  
+売掛金80,000 / 売上100,000  
+現金20,000  
+
+振替伝票に起票 : 売掛金80,000 / 売上100,000  
+入金伝票に起票 : 売上20,000  
+
+or  
+
+売掛金100,000 / 売上100,000  
+現金20,000 / 売掛金20,000  
+
+振替伝票に起票 : 売掛金100,000 / 売上100,000  
+入金伝票に起票 : 売掛金20,000  
+
+---
+
+### 前回、仕訳って仕訳帳に書くって言ってなかったっけ？
+
+#### 仕訳データの流れ  
+
+仕訳帳---転機--→総勘定元帳  
+(伝票)  
+
+仕訳は**仕訳帳**に記載  
+or  
+仕訳は**伝票**に記載  
+
+**伝票は仕訳帳の代わり**  
+仕訳は仕訳帳にかかれることもあるし、伝票があれば伝票にかかれることもある。
+
+#### こういうパターンもある
+
+伝票---集計(1日分)--→仕訳日計表---合計転記--→総勘定元帳  
+
+伝票の内容を1個1個総勘定元帳に転記するのではなく、1日分の集計をしてから転記することもある。  
+仕訳日計表から総勘定元帳へ転記することを合計転記と呼ぶこともある。  
+
+どうも簿記検定に受かるためには必要な知識かもしれないが、実務的にはどうなのって内容らしい。  
+
+---
+
+### 練習問題
+
+Q1:  
+買掛金支払のために小切手を振り出した。使う伝票は何？
+
+A1:  
+振替伝票  
+
+_  
+
+Q2:  
+土地を現金で購入した。使う伝票は何？
+
+A2:  
+出金伝票  
+
+_  
+
+Q3:  
+当座預金から現金を引き出した。使う伝票は何？  
+
+A3:  
+入金伝票  
+
+_  
+
+Q4:  
+100万円の土地を購入した。代金のうち20万円は普通預金から支払い、残額はツケとした。使う伝票は何？  
+
+A4:  
+振替伝票  
+起こしたい仕訳は  
+土地1,000,000 / 普通預金200,000  
+　　　　　　　/ 未払金   800,000  
+なお振替伝票を2枚に分けずに、1枚の振替伝票に複数行の仕訳をすべて記入するのが通常だと思います。  
+
+_  
+
+Q5:  
+100万円の土地を購入した。代金のうち20万円は現金で支払い、残額はツケとした。使う伝票は何？
+
+A5:  
+出金伝票（20万円）と振替伝票（80万円）  
+起こしたい仕訳は  
+土地1,000,000 / 現金    200,000  
+　　　　　　　 未払金800,000  
+
+_  
+
+Q6:  
+伝票を用いる場合、仕訳帳は用いられない。〇か×か？  
+
+A6:  
+〇  
+、、、少なくとも、これは簿記検定試験用の知識であって、実務では、、、、、、、そうとも、、、  
+
+_  
+
+Q7:  
+伝票を用いている場合、伝票に記載された勘定科目1つ1つを総勘定元帳に転記することもできるが、そうせずに、1日分の伝票をすべて集計し、各勘定科目の1日分の合計値をもって総勘定元帳に転記する方法もある。この集計作業で作成される表を何という？  
+
+A7:  
+仕訳日計表  
