--- a/BookKeeping/簿記3級/第17回_証憑.md
+++ b/BookKeeping/簿記3級/第17回_証憑.md
@@ -6,14 +6,6 @@
 
 ---
 
-### 目次
-
-1. 全体像
-2. 主要簿
-3. 補助簿
-
----
-
 ### 全体像
 
 今までは問題文という文章で与えられてきた。  
@@ -62,3 +54,110 @@
 - 預金口座から支払った場合 : **普通預金なら通帳**,**当座預金なら取引照会**
 
 ---
+
+商品売買1 : 当社(ふくしま電気)は商品を掛けで仕入れた。  
+
+仕入3,000,000 / 買掛金3,000,000  
+
+※  
+品名の「ノートパソコン」は**商品有高帳**に記入します。  
+仕入先の「パソコン卸問屋あきば」は**買掛金元帳**に記入します。  
+
+![商品売買1](/BookKeeping\簿記3級\画像置き場\17_商品売買1.png)
+
+---
+
+商品売買2 : 当社(ふくしま電気)は買掛代金を支払った。  
+→現金・小切手・手形の場合、**必ず領収証を受け取る!**  
+
+買掛金3,000,000 / 現金3,000,000  
+
+※  
+領収証は収入印紙(租税公課)を貼らなければいけない。  
+貼るのは支払った側。今回の場合は「ふくしま電気」。  
+
+![商品売買2](/BookKeeping\簿記3級\画像置き場\17_商品売買2.png)
+
+---
+
+商品売買2 : 当社(ふくしま電気)は買掛代金を支払った。  
+→預金口座から支払った場合、**入出金データ(取引照会)**  
+
+買掛金3,000,000 / 当座預金3,000,000  
+
+![取引照会](/BookKeeping\簿記3級\画像置き場\17_取引照会.png)
+
+---
+
+商品売買3 : 商品を掛けで販売した。  
+→**受領書(受け取りサイン済み納品書)**  
+
+納品書の控えにサインをもらえば**受領書**と言われる物になる。  
+
+売掛金1,500,000 / 売上1,500,000  
+売掛金という資産の増加、売上という収益の発生  
+
+売った先は「株式会社朱里観光」  
+画像右下の受領印にサインorハンコをもらう  
+
+![商品売買3_納品書](/BookKeeping\簿記3級\画像置き場\17_商品売買3_納品書.png)
+
+---
+
+商品売買4 : 売掛代金を回収した。  
+→現金・小切手・手形の場合、**現物**
+
+現金1,500,000 / 売掛金1,500,000  
+
+発行元は購入した側なので、「株式会社朱里観光」  
+
+![商品売買4_小切手](/BookKeeping\簿記3級\画像置き場\17_商品売買4_小切手.png)
+
+---
+
+商品売買4 : 売掛代金を回収した。  
+→預金口座に入金された場合、**入出金データ(取引照会)**
+
+当座預金1,500,000 / 売掛金1,500,000  
+
+![商品売買4_取引照会](/BookKeeping\簿記3級\画像置き場\17_商品売買4_取引照会.png)
+
+---
+
+##### 経費の支払い  
+
+「新聞代を支払った」「消耗品の代金を支払った」など  
+
+- 現金・小切手・手形の場合 : **領収証(領収書)**
+- 預金口座から支払った場合 : **普通預金なら通帳**,**当座預金なら取引照会**
+
+取引先に商談に言っていた営業社員が帰社し、以下の証憑を経理部に呈示(ていじ：証券や証明を提示すること)してきたので現金で精算した。  
+
+旅費交通費600 / 現金600  
+
+![経費の支払い_駐車券](/BookKeeping\簿記3級\画像置き場\17_経費の支払い_駐車券.png)
+
+---
+
+以下の納付書について小切手とともに銀行へ持参した。  
+
+×法人税等150,000 / 当座預金150,000  
+→
+仮払法人税等150,000 / 当座預金150,000  
+画像の真ん中あたりに**申告区分:中間報告とあるので仮払**に相当する。  
+税金の種類は左上に書いてある通り、法人税にあたる。  
+
+※  
+小切手で支払った証拠は小切手の耳と当座預金口座の取引照会  
+
+![経費の支払い_税領収証書](/BookKeeping\簿記3級\画像置き場\17_経費の支払い_税領収証書.png)
+
+---
+
+証憑→仕訳  
+
+渡された資料を基に仕訳を行う。  
+・税務調査 by税務署など  
+・会計監査 by会計監査人  
+仕訳をチェックしに来る。  
+その時、本当にその仕訳があったのかを証明するための証拠になるのが証憑である。  
