見た目が見たいのでいったん上げてみる

--- a/BookKeeping/簿記3級/第16回_精算表.md
+++ b/BookKeeping/簿記3級/第16回_精算表.md
@@ -8,8 +8,411 @@
 
 ### 経理業務一巡(復習)
 
+期中仕分(4/1～3/31)  
+
+- 商品売買  
+- 商品以外の売買  
+- 経費の支払  
+など  
+
+決算作業(4/1~5月下旬)  
+
+1. 前T/B作成  
+2. 決算整理仕訳作成  
+3. 後T/B作成  
+4. B/S・P/L作成
+
 ---
 
-### 精算表
+### 精算表ってどんな？
+
+試算表→前T/B  
+修正記入→決算整理仕訳  
+損益計算書,貸借対照表→後T/B  
+
+<table>
+  <tr>
+    <th rowspan="2">科目</th>
+    <th colspan="2">試算表</th>
+    <th colspan="2">修正記入</th>
+    <th colspan="2">損益計算書</th>
+    <th colspan="2">貸借対照表</th>
+  </tr>
+  <tr>
+    <th>借方</th>
+    <th>貸方</th>
+    <th>借方</th>
+    <th>貸方</th>
+    <th>借方</th>
+    <th>貸方</th>
+    <th>借方</th>
+    <th>貸方</th>
+  </tr>
+  <tr>
+    <td>売掛金</td>
+    <td> 2000</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 2000</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>繰越商品</td>
+    <td> 400</td>
+    <td> </td>
+    <td> 500</td>
+    <td> 400</td>
+    <td> </td>
+    <td> </td>
+    <td> 500</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>建物</td>
+    <td> 3300</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 3300</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>貸倒引当金</td>
+    <td> </td>
+    <td> 40</td>
+    <td> </td>
+    <td> 20</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 60</td>
+  </tr>
+  <tr>
+    <td>建物減価償却累計額</td>
+    <td> </td>
+    <td> 200</td>
+    <td> </td>
+    <td> 100</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 300</td>
+  </tr>
+  <tr>
+    <td>借入金</td>
+    <td> </td>
+    <td> 300</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 300</td>
+  </tr>
+  <tr>
+    <td>資本金</td>
+    <td> </td>
+    <td> 3500</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 3500</td>
+  </tr>
+  <tr>
+    <td>繰越利益剰余金</td>
+    <td> </td>
+    <td> 660</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 660</td>
+  </tr>
+  <tr>
+    <td>売上</td>
+    <td> </td>
+    <td> 4000</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 4000</td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>仕入</td>
+    <td> 3000</td>
+    <td> </td>
+    <td> 400</td>
+    <td> 500</td>
+    <td> 2900</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>貸倒引当金繰入</td>
+    <td> </td>
+    <td> </td>
+    <td> 20</td>
+    <td> </td>
+    <td> 20</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>減価償却費</td>
+    <td> </td>
+    <td> </td>
+    <td> 100</td>
+    <td> </td>
+    <td> 100</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>支払利息</td>
+    <td> </td>
+    <td> </td>
+    <td> 2</td>
+    <td> </td>
+    <td> 2</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>未払利息</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 2</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 2</td>
+  </tr>
+  <tr>
+    <td>当期純利益</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> 978</td>
+    <td> </td>
+    <td> </td>
+    <td> 978</td>
+  </tr>
+  <tr>
+    <td>合計</td>
+    <td> 8700</td>
+    <td> 8700</td>
+    <td> 1022</td>
+    <td> 1022</td>
+    <td> 4000</td>
+    <td> 4000</td>
+    <td> 5800</td>
+    <td> 5800</td>
+  </tr>
+</table>
 
 ---
+
+
+---
+
+保管庫  
+<table>
+  <tr>
+    <th rowspan="2">科目</th>
+    <th colspan="2">資産表</th>
+    <th colspan="2">修正記入</th>
+    <th colspan="2">損益計算書</th>
+    <th colspan="2">貸借対照表</th>
+  </tr>
+  <tr>
+    <th>借方</th>
+    <th>貸方</th>
+    <th>借方</th>
+    <th>貸方</th>
+    <th>借方</th>
+    <th>貸方</th>
+    <th>借方</th>
+    <th>貸方</th>
+  </tr>
+  <tr>
+    <td>売掛金</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>繰越商品</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>建物</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>貸倒引当金</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>建物減価償却累計額</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>借入金</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>資本金</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>繰越利益剰余金</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>売上</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>仕入</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>貸倒引当金繰入</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>減価償却費</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>支払利息</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>未払利息</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>当期純利益</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+</table>
