vscodeのマーケットプレイスにつながらない問題と各種拡張のアップデートに伴う変更

--- a/VSCode/マーケットプレイスにつながらない問題/マーケットプレイスに繋がらない問題.md
+++ b/VSCode/マーケットプレイスにつながらない問題/マーケットプレイスに繋がらない問題.md
@@ -55,4 +55,41 @@ C:\\Program Files\\Microsoft VS Code\\product.json
 
 ---
 
-<https://support.borndigital.co.jp/hc/ja/articles/360002711593-Windows10%E3%81%A7%E7%89%B9%E5%AE%9A%E3%81%AE%E3%83%9D%E3%83%BC%E3%83%88%E3%82%92%E9%96%8B%E6%94%BE%E3%81%99%E3%82%8B>
+## 特定のポートを解放することで何とかならないか
+
+[Windows10で特定のポートを開放する](https://support.borndigital.co.jp/hc/ja/articles/360002711593-Windows10%E3%81%A7%E7%89%B9%E5%AE%9A%E3%81%AE%E3%83%9D%E3%83%BC%E3%83%88%E3%82%92%E9%96%8B%E6%94%BE%E3%81%99%E3%82%8B)
+
+---
+
+## 2021/01/04 Mon 解決
+
+ちょっとひらめいた。
+VSCodeの拡張が利用できない問題。
+Dockerで適当にサーバー立ち上げて、その先のサーバーで拡張利用できないか確かめたくない？
+それでそもそもネットワークが悪いのか現状の環境が悪いのか確認できる。
+それでもだめならパソコンが悪いしかありえんだろう。
+Dockerの復習にもなるし、環境スキルを上げるチャンスだ。
+→
+何というか、、、俺のパソコンもうだめかも。
+VSCodeだけじゃなく、クロームやエッジのアップデートもうまく行かない。
+ubuntuをwlsで動かそうとしてみたけど、それすらダメ。
+仕方ないので、ウィンドウズアップデートを確認したらソコソコあったので、とにかくぶん回してる。
+この間に雪かきする事にします。
+→
+原因はDNS設定だった。
+解決までの一連の流れをtilにまとめるべし。
+また、本当に原因がDNSか設定を元に戻してダメになるか確認する必要がある。
+→
+うーん？DNSをもとに戻したが再現しないな。
+順番的にはDNSを無条件状態から8.8.8.8 _ 8.8.4.4に変更した後で、VSCodeのProxyの設定をなしにしたらいけた。
+後はネットワーク設定でプロキシーの項目で1つだけチェックが入っていたからそれを取っ払ったのもあるか。
+とりあえず、それらを組み合わせた結果ということでまとめよう。
+
+設定→ネットワークとインターネット→プロキシ→設定を自動的に検出する→オフに変更  
+
+コンパネ→ネットワークと共有センター→左側タブの「アダプターの詳細設定」→対応アダプターを右クリックして「プロパティ」を選択→
+インターネット プロトコル バージョン4 を選択してプロパティを押下→次のDNSサーバーのアドレスを使うを選択して以下を設定。
+優先DNSサーバー : 8.8.8.8
+大体DNSサーバー : 8.8.4.4
+
+VSCodeを開く→左下の歯車から設定を選択→proxyで検索→すべてデフォルトの状態であることを確認  
