--- a/BookKeeping/簿記3級/第5回_手形・電子記録債権.md
+++ b/BookKeeping/簿記3級/第5回_手形・電子記録債権.md
@@ -196,6 +196,8 @@ B社はA社に手形を渡した。
 Q1:  
 手形には「受取手形」と「支払手形」の2種類がある。正しい？  
 
+→  
+
 A1:  
 ×  
 →
@@ -204,8 +206,10 @@ A1:
 「受取手形」も「支払手形」も勘定科目であって手形の名前ではありません。  
 「支払手形」ではなく「手形支払義務」みたいな勘定科目にすればわかりやすいのに、、、  
 
-ちなみに令和元年よりも前は、手形といえば「手形の裏書」と「手形の割引」という一番重要な論点があったのですが、令和元年の学習内容の大改定により2級以降で学習することになりました。
-もっというと、平成28年よりも前は、為替手形も3級で学習しました。つまり3級で「為替手形」も学習するうえに「手形の裏書」「手形の割引」も学習していたので、初学者にはとてもとても負担でした。そのため現状の3級ではとても簡単なものとなりました。
+ちなみに令和元年よりも前は、手形といえば「手形の裏書」と「手形の割引」という一番重要な論点があったのですが、令和元年の学習内容の大改定により2級以降で学習することになりました。  
+もっというと、平成28年よりも前は、為替手形も3級で学習しました。  
+つまり3級で「為替手形」も学習するうえに「手形の裏書」「手形の割引」も学習していたので、初学者にはとてもとても負担でした。  
+そのため現状の3級ではとても簡単なものとなりました。  
 
 _  
 
@@ -214,6 +218,8 @@ Q2:
 ①A社は、B社から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出してB社に渡した。  
 ②B社は手形を銀行に預けた。  
 ③手形の決済期日になり無事決済となり、B社の当座預金口座に手形代金が入金された。  
+
+→  
 
 A2:  
 ①仕入7,000 / 支払手形7,000  
@@ -228,6 +234,8 @@ Q3:
 ②B社は手形を銀行に預けた。  
 ③手形の決済期日になり無事決済となり、B社の当座預金口座に手形代金が入金された。  
 
+→  
+
 A3:  
 ①受取手形7,000 / 売上7,000  
 ②仕訳なし  
@@ -239,6 +247,8 @@ Q4:
 日比谷商店は内幸町商店から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出して内幸町商店に渡した。  
 なお日比谷商店**負担**の引取運賃300円は日比谷商店が現金で支払った。日比谷商店側の仕訳は？  
 
+→  
+
 A4:  
 仕入7,300 / 支払手形7,000
 　　　　 / 現金　　　300
@@ -248,6 +258,8 @@ _
 Q5:  
 諏訪商店が山口商店から現金１万円を借りて、その借用の証拠として手形を山口商店に渡した。諏訪商店側の仕訳は？  
 
+→  
+
 A5:  
 現金10,000 / 手形借入金10,000  
 
@@ -255,6 +267,8 @@ _
 
 Q6:  
 諏訪商店が山口商店から現金１万円を借りて、その借用の証拠として手形を山口商店に渡した。山口商店側の仕訳は？  
+
+→  
 
 A6:  
 手形貸付金10,000 / 現金10,000  
@@ -266,6 +280,8 @@ Q7:
 10月31日、B社はA社に対する買掛金について、電子債権記録機関に債務発生の記録を行った。  
 2月29日、当該電子記録債務の支払いが行われた（B社の当座預金からA社の当座預金に資金が振り替えられた）。  
 A社側の仕訳は？  
+
+→  
 
 A7:  
 9月20日 売掛金600 / 売上600  
