--- a/BookKeeping/簿記3級/第10回_決算整理仕訳2-3.md
+++ b/BookKeeping/簿記3級/第10回_決算整理仕訳2-3.md
@@ -40,8 +40,8 @@ _
 ○1年4月1日、50万円のパソコンを現金で購入した。  
 備品500,000 / 現金500,000  
 →  
-帳簿上の価値を「**簿価**」という。
-この例では備品が簿価に当たる。
+帳簿上の価値を「**簿価**」という。  
+この例では備品が簿価に当たる。  
 
 「5年使用したとしたら、5年後の価値は0円」と見積もった。  
 ○2年3月31日が終了し決算になった。  
@@ -149,14 +149,14 @@ Q:
 ○2年3月31日が終了し、決算になった。  
 A:  
 減価償却費30,000 / 減価償却累計額 30,000  
-→
-1月から3月までの3か月分を計上する。
+→  
+1月から3月までの3か月分を計上する。  
 
 Q:  
 ○3年3月31日が終了し、決算になった。  
 A:  
 減価償却費120,000 / 減価償却累計額120,000  
-→
+→  
 この地点での簿価は130-15=115万  
 
 Q:  
@@ -168,7 +168,7 @@ A:
 **固定資産売却損**_30,000 /  
 →  
 前回3月31日から5月31日は2か月が経過しているので2か月分の**減価償却**を行う。
-1月1万だから1,300,000-150,000+20,000
+1月1万だから1,300,000-150,000+20,000  
 2か月分の減価償却もしたうえで売ろうよ。  
 **2か月分の減価償却は累計額には含めずに費用の発生とするため、仕訳は分ける**。  
 計算すると3万円の損なので**固定資産売却損**という**費用**(**特別損失**)に計上する。  
@@ -200,8 +200,8 @@ A:
 売掛金2,000 / 売上2,000  
 →  
 売掛金とは売上として計上しているけれども未回収である状態の代金を指します。  
-売掛金は代金を後で受け取る権利がある「**売上債権**」のため、貸借対照表の**資産**に計上されます。
-売上は純粋に収益。
+売掛金は代金を後で受け取る権利がある「**売上債権**」のため、貸借対照表の**資産**に計上されます。  
+売上は純粋に収益。  
 例えば取引先に毎月50万円の売上があって翌月末に入金されるのであれば、仮に2月末に50万円の売上が発生した場合、その50万円は3月末に入金予定となります。  
 このような場合、2月末の時点では売掛金50万円/売上高50万円という形で処理をします。  
 
@@ -225,7 +225,7 @@ A:
 **貸倒引当金**:マイナスの資産  
 **貸倒引当金繰入**:費用  
 期末時点の債権(売掛金、未収入金、貸付金等)を今のうちに**費用**(**貸倒引当金繰入**)に計上してしまう。  
-でもって、今のうちに**資産**(**貸倒引当金**)を減額するってこと。  
+でもって、今のうちに**資産**(**貸倒引当金**)を減額する。  
 →  
 これを**貸倒引当金**の設定という  
 →  
@@ -290,7 +290,7 @@ Q:
 A:  
 貸倒引当金5,000 / 売掛金8,000  
 貸倒損失3,000 /  
-→
+→  
 貸倒引当金8,000 / 売掛金8,000としたいところだが、そうじゃない。  
 貸倒引当金30,000は3月31日に含まれていた売掛金に対する物。  
 ポイントは前期末に発生したのか当期に発生したのかということ。  
@@ -354,7 +354,7 @@ Q:
 ○2年3月20日,A社から500円現金で回収した。  
 A:  
 現金500 / 貸倒損失500  
-→
+→  
 貸倒損失という費用の取消  
 
 _  
@@ -365,7 +365,7 @@ Q:
 ○2年4月1日,A社から500円現金で回収した。  
 A:  
 現金500 / **償却債権取立益**500  
-→
+→  
 取消の反対仕訳は当期中ならいいが、期をまたいだ場合はダメ。  
 となれば、今期の収益と見込めるわけなので**償却債権取立益**という勘定科目を使う。  
 
@@ -389,6 +389,8 @@ Q1:
 ×2年3月31日が終了し決算になった。  
 ×1年4月1日に購入した機械装置（取得価額100万円、耐用年数9年、残存価額10万円）の減価償却の仕訳は？  
 
+→  
+
 A1:  
 減価償却費100,000 / 機械装置減価償却累計額100,000  
 →  
@@ -403,6 +405,8 @@ _
 Q2:  
 Q1の機械装置について、×3年3月31日終了後の決算でつくられる減価償却の仕訳は？  
 
+→  
+
 A2:  
 減価償却費100,000 / 機械装置減価償却累計額100,000  
 →  
@@ -411,6 +415,8 @@ A2:
 _  
 Q3:  
 （Q1およびQ2の続き） ×3年4月1日、上記機械装置を、50万円で販売し、代金は後日受け取ることにした。仕訳は？  
+
+→  
 
 A3:  
 機械装置減価償却累計額200,000 / 機械装置1,000,000  
@@ -429,6 +435,8 @@ Q4:
 ②×2年3月3日、B社が倒産し上記売掛金が貸倒れた。  
 仕訳は？  
 
+→  
+
 A4:  
 ①売掛金100 / 売上100  
 ②貸倒損失100 / 売掛金100  
@@ -437,6 +445,8 @@ _
 
 Q5:  
 ×2年3月31日が終了し初めての決算になった。売掛金および受取手形の残高合計100,000円について、来期に2%が貸倒れると見積もった。仕訳は？  
+
+→  
 
 A5:  
 貸倒引当金繰入2,000 / 貸倒引当金2,000  
@@ -452,6 +462,8 @@ Q6:
 仕訳は？  
 （なお、×2年3月31日を期末日とする決算において、決算整理仕訳は適切にすべて行われたものとし、貸倒引当金残高は充分あるものとする）  
 
+→  
+
 A6:  
 ①売掛金100 / 売上100  
 ②貸倒引当金100 / 売掛金100  
@@ -465,6 +477,8 @@ _
 Q7:  
 ×4年5月1日、得意先C社が倒産した。なおC社に対する売掛金は300円であり、このうち100円は前期中に販売したものであり、残り200円は当期中に販売したものである。なおこの時点で貸倒引当金残高は1,000円ある。仕訳は？  
 
+→  
+
 A7:  
 貸倒引当金100 / 売掛金300
 貸倒損失   200  
@@ -473,6 +487,8 @@ _
 
 Q8:  
 ×8年3月31日が終了し決算となった。売掛金および受取手形の残高合計100,000円について、来期に2%が貸倒れると見積もった。なおこの時点で貸倒引当金残高は3,000円ある。仕訳は？  
+
+→  
 
 A8:  
 貸倒引当金1,000 / 貸倒引当金戻入1,000  
@@ -489,6 +505,8 @@ Q9:
 ③×2年3月30日、上記売掛金のうち100円が現金で回収された。  
 仕訳は？  
 
+→  
+
 A9:  
 ①売掛金300 / 売上300  
 ②貸倒損失300 / 売掛金300  
@@ -501,6 +519,8 @@ Q10:
 ②×2年3月25日、A社が倒産し上記売掛金が貸倒れた。  
 ③×2年4月1日、上記売掛金のうち100円が現金で回収された。なおこの時点で貸倒引当金残高は500円である。  
 仕訳は？  
+
+→  
 
 A10:  
 ①売掛金300 / 売上300  
@@ -521,6 +541,8 @@ Q11:
 ×2年3月1日に120万円のパソコンを購入したため、×2年3月31日終了時点の決算において減価償却を行う（耐用年数10年、残存価額0円）。  
 仕訳は？  
 
+→  
+
 A11:  
 減価償却費10,000 / 備品減価償却累計額10,000  
 →  
@@ -532,6 +554,8 @@ _
 
 Q12:  
 (Q11の続き)×2年5月31日、上記パソコンが不要になったのでほとんど使っていないが売却することにし、100万円で売却し、代金は後日受け取ることとした。仕訳は？  
+
+→  
 
 A12:
 減価償却累計額30,000 / 備品1,200,000  
