--- a/BookKeeping/簿記3級/第14回_帳簿.md
+++ b/BookKeeping/簿記3級/第14回_帳簿.md
@@ -47,12 +47,14 @@ A:
 
 例えば  
 4月2日、A社から1個100円の商品aを300個掛けで仕入れた。  
-4月10日、B社から1個110円の商品aを700個掛けで仕入れた。 4月15日、当座預金から現金10万円を引き出した。  
+4月10日、B社から1個110円の商品aを700個掛けで仕入れた。  
+4月15日、当座預金から現金10万円を引き出した。  
 4月20日、現金で、事務所家賃8万円を不動産業のC社に支払った。  
 4月21日、X社に商品aを1個200円で400個掛け販売した。  
-4月25日、Y社に商品aを1個200円で200個販売し、手形を受け取っ 4月26日、D社から30万円の事務所用PCを現金で購入した。  
+4月25日、Y社に商品aを1個200円で200個販売し、手形を受け取った  
+4月26日、D社から30万円の事務所用PCを現金で購入した。  
 →  
-仕訳帳に仕訳していく。
+仕訳帳に仕訳していく。  
 その後、仕訳情報を総勘定元帳(勘定科目ごとに分かれている)に書き写す(これを**転記**という)  
 
 #### 仕訳帳
@@ -95,7 +97,7 @@ A:
 |:--|:--|
 |4/20 現金80,000|_|
 
-総勘定元帳の書く勘定科目の内容には相手勘定を書く。  
+総勘定元帳の各勘定科目の内容には相手勘定を書く。  
 現金、当座預金、売掛金、買掛金は貸借対照表(STOCK)の情報なので、前年から引き継がれる。  
 仕入、支払家賃は損益計算書(FLOW)の情報なので、決算で零クリアされる。  
 
@@ -128,7 +130,8 @@ A:
 世の中の99%くらいはほぼこの言い方をしているはず。  
 
 例えば  
-4月2日、A社から1個100円の商品aを300個掛けで仕入れた。 4月10日、B社から1個110円の商品aを700個掛けで仕入れた。  
+4月2日、A社から1個100円の商品aを300個掛けで仕入れた。  
+4月10日、B社から1個110円の商品aを700個掛けで仕入れた。  
 4月15日、当座預金から現金10万円を引き出した。  
 4月20日、現金で、事務所家賃8万円を不動産業のC社に支払った。  
 4月21日、X社に商品aを1個200円で400個掛け販売した。  
@@ -189,6 +192,8 @@ A:
 Q1:  
 会計帳簿は概念的に大きく2つに分かれる。何と何？
 
+→  
+
 A1:  
 主要簿と補助簿  
 
@@ -196,6 +201,8 @@ _
 
 Q2:  
 主要簿に分類される帳簿って何？  
+
+→  
 
 A2:  
 仕訳帳と総勘定元帳  
@@ -205,6 +212,8 @@ _
 Q3:  
 仕訳帳から総勘定元帳へ、勘定科目一つ一つ仕訳データを書き写すことを何ていう？  
 
+→  
+
 A3:  
 転記  
 
@@ -212,6 +221,8 @@ _
 
 Q4:  
 仕訳帳と総勘定元帳以外の会計帳簿を補助簿という。〇か×か？  
+
+→  
 
 A4:  
 〇  
@@ -221,6 +232,8 @@ _
 Q5:  
 土地や建物などの明細（取得日、帳簿価額、取得価額など）を記載しておく補助簿は何？  
 
+→  
+
 A5:  
 固定資産台帳  
 
@@ -228,6 +241,8 @@ _
 
 Q6:  
 現金の入出金を記録しておく補助簿は何？  
+
+→  
 
 A6:  
 現金出納帳  
