--- a/BookKeeping/簿記3級/第15回_伝票.md
+++ b/BookKeeping/簿記3級/第15回_伝票.md
@@ -162,7 +162,9 @@ or
 ### 練習問題
 
 Q1:  
-買掛金支払のために小切手を振り出した。使う伝票は何？
+買掛金支払のために小切手を振り出した。使う伝票は何？  
+
+→  
 
 A1:  
 振替伝票  
@@ -170,7 +172,9 @@ A1:
 _  
 
 Q2:  
-土地を現金で購入した。使う伝票は何？
+土地を現金で購入した。使う伝票は何？  
+
+→  
 
 A2:  
 出金伝票  
@@ -180,6 +184,8 @@ _
 Q3:  
 当座預金から現金を引き出した。使う伝票は何？  
 
+→  
+
 A3:  
 入金伝票  
 
@@ -187,6 +193,8 @@ _
 
 Q4:  
 100万円の土地を購入した。代金のうち20万円は普通預金から支払い、残額はツケとした。使う伝票は何？  
+
+→  
 
 A4:  
 振替伝票  
@@ -198,7 +206,9 @@ A4:
 _  
 
 Q5:  
-100万円の土地を購入した。代金のうち20万円は現金で支払い、残額はツケとした。使う伝票は何？
+100万円の土地を購入した。代金のうち20万円は現金で支払い、残額はツケとした。使う伝票は何？  
+
+→  
 
 A5:  
 出金伝票（20万円）と振替伝票（80万円）  
@@ -211,6 +221,8 @@ _
 Q6:  
 伝票を用いる場合、仕訳帳は用いられない。〇か×か？  
 
+→  
+
 A6:  
 〇  
 、、、少なくとも、これは簿記検定試験用の知識であって、実務では、、、、、、、そうとも、、、  
@@ -218,7 +230,11 @@ A6:
 _  
 
 Q7:  
-伝票を用いている場合、伝票に記載された勘定科目1つ1つを総勘定元帳に転記することもできるが、そうせずに、1日分の伝票をすべて集計し、各勘定科目の1日分の合計値をもって総勘定元帳に転記する方法もある。この集計作業で作成される表を何という？  
+伝票を用いている場合、伝票に記載された勘定科目1つ1つを総勘定元帳に転記することもできるが、  
+そうせずに、1日分の伝票をすべて集計し、各勘定科目の1日分の合計値をもって総勘定元帳に転記する方法もある。  
+この集計作業で作成される表を何という？  
+
+→  
 
 A7:  
 仕訳日計表  
