応用情報2章

--- a/AppliedInformation/2.アルゴリズムとプログラミング/過去問道場.md
+++ b/AppliedInformation/2.アルゴリズムとプログラミング/過去問道場.md
@@ -49,13 +49,119 @@ i = 99 のとき、A[99, 0]～A[99, 98]までの99個、
 
 ---
 
----
+Q:  
+要求に応じて可変量のメモリを割り当てるメモリ管理方式がある。要求量以上の大きさをもつ空き領域のうちで最小のものを割り当てる最適適合(best-fit)アルゴリズムを用いる場合，空き領域を管理するためのデータ構造として，メモリ割当て時の平均処理時間が最も短いものはどれか。  
+平成31年春期　問5  
+6問目／選択範囲の問題数36問  
+
+→
+
+A:  
+空き領域の大きさをキーとする2分探索木  
+→  
+正しい。要求サイズとキー値を比較しながら2分探索木の枝をたどることで効率よく探索することができます。  
+
+・空き領域のアドレスをキーとする2分探索木  
+キー値がアドレスでは適切な空き領域をもつものを探索することができません。  
+・空き領域の大きさが小さい順の片方向連結リスト  
+要求サイズが小さい場合は早く探索できますが、要求サイズが大きくなればなるほどリストをたどる回数が増え非効率になります。  
+・アドレスに対応したビットマップ  
+ビットマップインデックスは値の種類が少ない場合には有効ですが、範囲指定検索には適していません。  
+
+この問題参考書的にはソフトウェアの範囲になってる。  
 
 ---
 
----
+異なるn個のデータが昇順に整列された表がある。この表をm個のデータごとのブロックに分割し，各ブロックの最後尾のデータだけを線形探索することによって，目的のデータの存在するブロックを探し出す。次に，当該ブロック内を線形探索して目的のデータを探し出す。このときの平均比較回数を表す式はどれか。ここで，mは十分大きく，nはmの倍数とし，目的のデータは必ず表の中に存在するものとする。
+平成30年春期　問6
+7問目／選択範囲の問題数36問
+
+→
+
+```math
+m / 2 + n / 2m
+```
+
+線形探索法 平均比較回数 (N＋1)／2回  
+
+最初は、n個のデータをm個ごとのブロックに分割した最後尾のデータのみを探索します。表のデータは昇順に整列されているので、各ブロック最後尾の並びも昇順になっているはずです。この最後尾データの並びに対して「目的のデータ≦各ブロックの最後尾データ」を順次チェックし、目的のデータが存在するブロックを探します。
+この1回目の探索では、データを1つずつチェックしていくので線形探索の考え方を準用できます。探索するデータ数は n／m個 なので、目的のデータが存在するブロックが決定するまでの平均比較回数は、
+
+　(n／m＋1)／2 [回]
+
+2回目は、1回目の探索によって見つけたブロック内を線形探索します。探索するデータ数は m個 なので、目的のデータを見つけるまでの平均比較回数は、
+
+　(m＋1)／2 [回]
+
+2つの比較回数の合計は、
+
+　(n／m＋1)／2 + (m＋1)／2 [回]
+
+となります。ここで、mは十分に大きいという条件が与えられていますが、n／mが十分に大きいとは限りませんので定数項の+1は無視できません。よって、以下のように式を変形します。
+
+　 (n／m＋1)／2 + (m＋1)／2
+＝{(n／m＋1) + (m＋1)}／2
+＝(n／m + m + 2)／2
+＝n／2m + m／2 + 2／2
+＝n／2m + m／2 + 1
+
+"n／2m"は、nがmより十分大きい場合に十分大きくなり無視できない、"+1"はm／2が十分大きいので無視できると考えると、定数項の＋1を除いて n／2m＋m／2。つまり、1回目と2回目の平均比較回数を合わせるとになります。
+
+※補足
+上記の解説ではmが十分に大きいという理由で＋1を除外していますが、線形探索の特性上、目的のデータが必ず存在するならば、最後の1つ前（n－1番目）の要素までの比較で目的のデータが見つからなかった場合、最後の要素が目的のデータであることが確定します。このため最小比較回数を 1回、最大比較回数を n－1回、平均比較回数を n／2回 として考えることもできるでしょう。この考え方だと1回目の平均比較回数が n／2m回、2回目の平均比較回数が m／2回となり、正解の式と一致します。
 
 ---
+
+ポインタを用いた線形リストの特徴のうち，適切なものはどれか。  
+令和2年秋期　問5  
+12問目／選択範囲の問題数36問  
+
+→
+
+ポインタによって指定されている要素の後ろに，新たな要素を追加する計算量は，要素の個数や位置によらず一定である。  
+正しい。単方向リストの場合は新たな要素の追加は以下の手順で行われます。  
+ポインタで指定された要素(以降、元要素)を取得する  
+元要素のポインタを新要素のポインタに付け替える  
+元要素のポインタが新要素を指し示すようにする  
+元要素の取得後、その要素の後ろに新たな要素を追加する計算量は、リストの要素の個数や追加する位置によらず一定です。  
+一方、配列の場合は追加する位置以後の要素を1つずつ後ろにシフトしなければなりません。  
+
+ポインタから次の要素を求めるためにハッシュ関数を用いる。  
+ポインタとは次の要素が格納されているメモリアドレスの情報です。  
+次の要素を得るにはポインタが指し示すメモリ上のデータを読み込みます。  
+
+---
+
+葉以外の節点はすべて二つの子をもち，根から葉までの深さがすべて等しい木を考える。この木に関する記述のうち，適切なものはどれか。ここで，木の深さとは根から葉に至るまでの枝の個数を表す。また，節点には根及び葉も含まれる。
+平成30年秋期　問6
+17問目／選択範囲の問題数36問
+
+→
+
+葉の個数がnならば，葉以外の節点の個数はn－1である。
+
+「葉以外の節点はすべて二つの子をもち，根から葉までの深さがすべて等しい木」は完全2分木と呼ばれ、木の深さが「n」であれば葉の数は「2n」、葉の数が「n」であれば、葉以外の節点の数(根を含む)は「n－1」であるという特徴を持っています。
+
+---
+
+分割統治を利用した整列法はどれか。  
+令和元年秋期　問8  
+18問目／選択範囲の問題数36問  
+
+→
+
+クイックソート  
+
+分割統治法は、大きな問題をいくつかの小さな問題に分割し、その小さな問題の解を統合することで最終的に問題を解決しようとする考え方です。  
+
+クイックソートは、n個のデータをある基準値以下の値のグループと基準値以上の値のグループに分割し、さらにそれぞれのグループで基準値を選んで二つのグループに分割するという処理を繰り返してデータを整列するアルゴリズムです。下図のように全体を小集団に分けながら整列を行うので、分割統治型の整列法と言えます。  
+
+逐次添加法  
+バブルソート，基本選択法，基本挿入法，シェルソート  
+分割統治法  
+クイックソート，マージソート  
+データ構造の利用  
+ヒープソート，2分探索木  
 
 ---
 
