自己申告書

--- a/Other/どうでもいいもの/自己申告書.md
+++ b/Other/どうでもいいもの/自己申告書.md
@@ -1,67 +1,120 @@
 # 自己申告書
 
+## 2021下期(4月~5月あたり)
+
+``` TXT
+■ 実績・成果・反省点 :
+実績・成果：
+1.Teela_GORA連携改善修正, 2.Teela_不具合対応, 3.RN3_各種実装と修正
+反省：
+とりあえず目標であった簿記3級と応用情報試験は完了。1月から4月は業務をこなしつつの勉強であったが、それを達成できたことになる。
+他、気になる資格の準備も進行中。業務においては極端な遅れやトラブルは発生していないので特筆して書くことはない。
+やらなければいけないことは業務・プライベートに関係なく、全て消化し、常に最適化を実践中。
+その一環として一番大きかったのが生活リズムの改善。6時半に起床し、一番頭が働く時間帯に筋トレ、瞑想、勉強をするようにした。
+6時半では遅いほうなので、できるようであればもっと改善していきたい。
+現状でも全く満足はしていないので、自分が好きなように上を目指していくのみである。
+
+■ 資格 :
+日商簿記3級
+
+■メモ
+申告したところで何か変わるわけでもないが、まぁ、決まりなんだから仕方がないよね。
+今年は1月から4月にかけては勉強しかしなかったはず。
+去年の10月から一旦失速したけど、盛り返した感じか。
+勉強して、目の前の業務をこなしただけ。それ以外は特にない。
+まぁそもそも重要な仕事を割り振られないから関係ないんだけどね。
+生活リズムも買えたか。
+とりあえず6時半に起きるようにして、筋トレ、瞑想、勉強を一番頭が働く寝起きから少し立ったくらいにするようにした。
+
+業務において新鮮さを感じなくなってきたのは悲しいこと。
+でも、自分の今の状態で他を当たれる自信もないし、まだまだやらないといけないことがあるから、
+とにかく目の前の案件の消化を優先する。
+```
+
 ## 今回_上期
 
-    ■ 実績・成果・反省点 :
-    実績・成果：
-    1.Teela_OESマスタ,GORA連携開発, 2.Teela_不具合対応, 3.RoundNavi3_商品台帳実装  
-    反省：
-    実りある半年だったと思います。およそ業務においてはホウレンソウからGORA連携に至り、満足な成果を上げることが出来たと感じております。
-    最適化、効率化については問題なく実現できているので特に書くことがありません。
-    勉強においては、当初の目標である環境系に余り取り組むことが出来ませんでした。本業とは関係ない勉強に傾倒したためです(投資関係)。
-    しかし、個人的にはあまり気にしておりません。学習の意思は衰えていないからです。
-    TIL等の取り組みも始め、気になる知識は多分にあるので、どんどん吸収していきたい所存でございます。
+``` TXT
+■ 実績・成果・反省点 :
+実績・成果：
+1.Teela_OESマスタ,GORA連携開発, 2.Teela_不具合対応, 3.RoundNavi3_商品台帳実装  
+反省：
+実りある半年だったと思います。およそ業務においてはホウレンソウからGORA連携に至り、満足な成果を上げることが出来たと感じております。
+最適化、効率化については問題なく実現できているので特に書くことがありません。
+勉強においては、当初の目標である環境系に余り取り組むことが出来ませんでした。本業とは関係ない勉強に傾倒したためです(投資関係)。
+しかし、個人的にはあまり気にしておりません。学習の意思は衰えていないからです。
+TIL等の取り組みも始め、気になる知識は多分にあるので、どんどん吸収していきたい所存でございます。
 
-    ■ 資格 :
-    取得した資格はありません。
+■ 資格 :
+取得した資格はありません。
 
-    ■ メモ :
-    今回は正直なところ、余り勉強は出来ていない。
-    投資の勉強ばかりしていた。少なくとも3か月もの間はそればっかりだった。
-    ほぼ毎日、何かしらの知識を得るための勉強(til:Today I Learned)は始めた。
-    プログラムが書けるだけでは半分以下の価値しかありません。体系的な知識が全て組み合わさって
+■ メモ :
+今回は正直なところ、余り勉強は出来ていない。
+投資の勉強ばかりしていた。少なくとも3か月もの間はそればっかりだった。
+ほぼ毎日、何かしらの知識を得るための勉強(til:Today I Learned)は始めた。
+プログラムが書けるだけでは半分以下の価値しかありません。体系的な知識が全て組み合わさって
+```
 
 ## 前回_上期
 
-    ■ 実績・成果・反省点 :
-    
-    実績・成果：
-    ①Teela不具合対応
-    反省：
-    およそ十分に目標を達成できたと感じております。Teelaの修正も十分ではないにしろ、必要分はできていると感じております。
-    仕様を理解できていない分、速度の問題がありますがそれは今後上げていきたいと思います。
-    プライベートにおける勉強も前例がないほどにできました。(React,Docker,Git,PHP,HTML,JavaScript,ネットワーク,C#)
-    しかし、自分の理想には届いておりません。引き続き継続していきたいです。
-    Teelaに集中させていただいたことには感謝しております。気力、体力、精神力とも十分に回復できました。
-    今は目の前のことに集中したいと思います。その先のことはわかりませんが、自分自身に十分な力がなければその先 もやっていけません。
-    だからこそ、今は自分自身への投資を優先していきたいです。
+``` TXT
+■ 実績・成果・反省点 :
 
-    ■ 資格 :
-    2019年の応用情報は残念ながら、午後問題で3点足りず落ちてしまいました。
-    よって資格はありません。
+実績・成果：
+①Teela不具合対応
+反省：
+およそ十分に目標を達成できたと感じております。Teelaの修正も十分ではないにしろ、必要分はできていると感じております。
+仕様を理解できていない分、速度の問題がありますがそれは今後上げていきたいと思います。
+プライベートにおける勉強も前例がないほどにできました。(React,Docker,Git,PHP,HTML,JavaScript,ネットワーク,C#)
+しかし、自分の理想には届いておりません。引き続き継続していきたいです。
+Teelaに集中させていただいたことには感謝しております。気力、体力、精神力とも十分に回復できました。
+今は目の前のことに集中したいと思います。その先のことはわかりませんが、自分自身に十分な力がなければその先 もやっていけません。
+だからこそ、今は自分自身への投資を優先していきたいです。
+
+■ 資格 :
+2019年の応用情報は残念ながら、午後問題で3点足りず落ちてしまいました。
+よって資格はありません。
+```
 
 ---
 
+## 2021下期(4月~5月あたり)_下期見直目標設定
+
+``` TXT
+■ 一次 :
+・
+
+■ 資格 :
+・基本情報技術者試験
+・簿記2級
+・LPIC1
+・ORACLE Bronze
+・JAVA Silcer
+```
+
 ## 今回_下期見直目標設定
 
-    ■ 一次 :
-    ・気になる知識はとにかく吸収する
-    ・もっと多角的になっていかなければと思う
-    ・身の程をわきまえていく
+``` TXT
+■ 一次 :
+・気になる知識はとにかく吸収する
+・もっと多角的になっていかなければと思う
+・身の程をわきまえていく
 
-    ■ 資格 :
-    余裕があれば応用情報に再挑戦したいと思います。
-    他にも気になる資格は取得していきたいです。(簿記,LPIC等)
+■ 資格 :
+余裕があれば応用情報に再挑戦したいと思います。
+他にも気になる資格は取得していきたいです。(簿記,LPIC等)
+```
 
 ## 前回_下期見直目標設定
 
-    ■ 一次 :
-    ・プログラミングだけではなく、環境系の知識も習得していく(Docker,Nginx,Apatch,Linux)
-      まずは環境の習得を目指すが、それに限らず気になるものはすべて身に着けていきたい。
-    ・論理的でわかりやすい説明ができるようにしたい。
-    ・更なる最適化、効率化を目指す。
-    ・変化に対応できる柔軟性を身に着けていきたい。
+``` TXT
+■ 一次 :
+・プログラミングだけではなく、環境系の知識も習得していく(Docker,Nginx,Apatch,Linux)
+    まずは環境の習得を目指すが、それに限らず気になるものはすべて身に着けていきたい。
+・論理的でわかりやすい説明ができるようにしたい。
+・更なる最適化、効率化を目指す。
+・変化に対応できる柔軟性を身に着けていきたい。
 
-    ■ 資格 :
-    余裕があれば応用情報技術者試験に再挑戦したいと思います。
-    今はWeb系の勉強が楽しいので、それ次第だと思っています。
+■ 資格 :
+余裕があれば応用情報技術者試験に再挑戦したいと思います。
+今はWeb系の勉強が楽しいので、それ次第だと思っています。
+```
