--- a/Other/どうでもいいもの/自己申告書.md
+++ b/Other/どうでもいいもの/自己申告書.md
@@ -1,18 +1,20 @@
 # 自己申告書
 
-## 2021下期(4月~5月あたり)
+## 令和２年度下期の実績・成果・反省点、資格
 
 ``` TXT
 ■ 実績・成果・反省点 :
 実績・成果：
 1.Teela_GORA連携改善修正, 2.Teela_不具合対応, 3.RN3_各種実装と修正
 反省：
-とりあえず目標であった簿記3級と応用情報試験は完了。1月から4月は業務をこなしつつの勉強であったが、それを達成できたことになる。
-他、気になる資格の準備も進行中。業務においては極端な遅れやトラブルは発生していないので特筆して書くことはない。
+とりあえず目標であった簿記3級と応用情報試験は完了。
+1月から4月は業務をこなしつつの勉強であったが、それを達成できたことになる。
+他、気になる資格の準備も進行中。
+業務においては極端な遅れやトラブルは発生していないので特筆して書くことはない。
 やらなければいけないことは業務・プライベートに関係なく、全て消化し、常に最適化を実践中。
 その一環として一番大きかったのが生活リズムの改善。6時半に起床し、一番頭が働く時間帯に筋トレ、瞑想、勉強をするようにした。
-6時半では遅いほうなので、できるようであればもっと改善していきたい。
-現状でも全く満足はしていないので、自分が好きなように上を目指していくのみである。
+6時半では遅いほうなので、もっと改善していきたい。まだまだ改善の余地を感じるので、どこまで行けるか楽しみである。
+現状で全く満足していないので、好きなように上を目指していくのみである。
 
 ■ 資格 :
 日商簿記3級
@@ -29,6 +31,9 @@
 業務において新鮮さを感じなくなってきたのは悲しいこと。
 でも、自分の今の状態で他を当たれる自信もないし、まだまだやらないといけないことがあるから、
 とにかく目の前の案件の消化を優先する。
+
+自分の立場くらいわかっている。
+そうでもしないとやっていけない状態なのだから、そうするのは当たり前だ。
 ```
 
 ## 今回_上期
@@ -77,16 +82,20 @@ Teelaに集中させていただいたことには感謝しております。気
 
 ---
 
-## 2021下期(4月~5月あたり)_下期見直目標設定
+## 令和3年度上期の目標設定の一次、資格
 
 ``` TXT
 ■ 一次 :
-・
+やりたいことは刻一刻と変化するので6か月先の具体的な目標は決めたくない。
+会社に対する目標ではなく自分に対する目標を達成していきたい。
+そうするだけでも、成長はエスカレートしていくことだろう。
+強いて言えば技術的な不安をどれだけ解消できるかと言ったことだろうか。
 
 ■ 資格 :
 ・基本情報技術者試験
 ・簿記2級
 ・LPIC1
+余裕があれば
 ・ORACLE Bronze
 ・JAVA Silcer
 ```
